--- a/src/main/resources/templates/findhotspots.html
+++ b/src/main/resources/templates/findhotspots.html
@@ -9,6 +9,10 @@
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <style type="text/css">
         #map{ width:700px; height: 400px; }
+
+        .space-left {
+        margin-left: 20px;
+        }
     </style>
 
     <!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
@@ -23,192 +27,110 @@
     <!-- Latest compiled and minified JavaScript -->
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/js/bootstrap.min.js"></script>
     <script type="text/javascript" src="https://maps.googleapis.com/maps/api/js?key=AIzaSyBSQWls2yhvWlo7JO0ihkQ1lJmoLG0vyPM"></script>
-    <div id="capture"></div>
-    <script>
-        // Note: This example requires that you consent to location sharing when
-        // prompted by your browser. If you see the error "The Geolocation service
-        // failed.", it means you probably did not give permission for the browser to
-        // locate you.
 
-        var marker = false;
-
-        function initMap() {
-            var map = new google.maps.Map(document.getElementById('map'), {
-                center: {lat: -34.397, lng: 150.644},
-                zoom: 14
-            });
-            var infoWindow = new google.maps.InfoWindow({map: map});
-
-            // Try HTML5 geolocation.
-            if (navigator.geolocation) {
-                navigator.geolocation.getCurrentPosition(function(position) {
-                    var pos = {
-                        lat: position.coords.latitude,
-                        lng: position.coords.longitude
-                    };
-
-                    infoWindow.setPosition(pos);
-                    infoWindow.setContent('Location found.');
-                    map.setCenter(pos);
-                    //Add lat and lng values to a field that we can save.
-                    document.getElementById('lat').value = pos.lat; //latitude
-                    document.getElementById('lon').value = pos.lng; //longitude
-                }, function() {
-                    handleLocationError(true, infoWindow, map.getCenter());
-                });
-            } else {
-                // Browser doesn't support Geolocation
-                handleLocationError(false, infoWindow, map.getCenter());
-            }
-
-            //Listen for any clicks on the map.
-            google.maps.event.addListener(map, 'click', function(event) {
-                //Get the location that the user clicked.
-                var clickedLocation = event.latLng;
-                //If the marker hasn't been added.
-                if(marker === false){
-                    //Create the marker.
-                    marker = new google.maps.Marker({
-                        position: clickedLocation,
-                        map: map,
-                        draggable: true //make it draggable
-                    });
-                    //Listen for drag events!
-                    google.maps.event.addListener(marker, 'dragend', function(event){
-                        markerLocation();
-                    });
-                } else{
-                    //Marker has already been added, so just change its location.
-                    marker.setPosition(clickedLocation);
-                }
-                //Get the marker's location.
-                markerLocation();
-            });
-        }
-
-        //This function will get the marker's current location and then add the lat/long
-        //values to our textfields so that we can save the location.
-        function markerLocation(){
-            //Get location.
-            var currentLocation = marker.getPosition();
-            //Add lat and lng values to a field that we can save.
-            document.getElementById('lat').value = currentLocation.lat(); //latitude
-            document.getElementById('lon').value = currentLocation.lng(); //longitude
-        }
-
-        function handleLocationError(browserHasGeolocation, infoWindow, pos) {
-            infoWindow.setPosition(pos);
-            infoWindow.setContent(browserHasGeolocation ?
-                    'Error: The Geolocation service failed.' :
-                    'Error: Your browser doesn\'t support geolocation.');
-        }
-
-        google.maps.event.addDomListener(window, 'load', initMap);
-    </script>
-
+    <script src="/js/angular.js"></script>
+    <script src="/js/angular-route.js"></script>
+    <script src="/js/hotspotcontroller1.js"></script>
 </head>
 <body>
-<div class="navbar navbar-default">
-    <div class="container">
-        <div class="navbar-header">
-            <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-collapse">
-                <span class="icon-bar"></span>
-                <span class="icon-bar"></span>
-                <span class="icon-bar"></span>
-            </button>
-            <a class="navbar-brand" href="http://www.telstra.com/">
-                <img src="images/telstra.png"
-                     th:src="@{images/telstra.png}"
-                     alt="Pivotal" height="32" width="32"
-                     border="0"/>
-            </a>
-            <a class="navbar-brand" href="http://run.pivotal.io/">
-                <img src="images/PoweredByPivotal1.png"
-                     th:src="@{images/PoweredByPivotal1.png}"
-                     alt="Pivotal"
-                     border="0"/>
-            </a>
-        </div>
-        <div class="navbar-collapse collapse">
-            <ul class="nav navbar-nav navbar-right  ">
-                <li><a href="/">Home</a></li>
-                <li><a href="https://dev.telstra.com/content/wifi-api" class="btn">About Telstra WIFI</a></li>
-            </ul>
-        </div>
+<div data-ng-app='hotspotsfinderapp'>
+    <div data-ng-controller="hotspotController" ng-init="">
+        <div class="navbar navbar-default">
+            <div class="container-fluid" >
+                <div class="navbar-header">
+                    <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-collapse">
+                        <span class="icon-bar"></span>
+                        <span class="icon-bar"></span>
+                        <span class="icon-bar"></span>
+                    </button>
+                    <a class="navbar-brand" href="http://www.telstra.com/">
+                        <img src="images/telstra.png"
+                             th:src="@{images/telstra.png}"
+                             alt="Pivotal" height="32" width="32"
+                             border="0"/>
+                    </a>
+                    <a class="navbar-brand" href="http://run.pivotal.io/">
+                        <img src="images/PoweredByPivotal1.png"
+                             th:src="@{images/PoweredByPivotal1.png}"
+                             alt="Pivotal"
+                             border="0"/>
+                    </a>
+                </div>
+                <div class="navbar-collapse collapse">
+                    <ul class="nav navbar-nav navbar-right">
+                        <li><a href="/">Home</a></li>
+                        <li><a href="https://dev.telstra.com/content/wifi-api" class="btn">About Telstra WIFI</a></li>
+                    </ul>
+                </div>
 
-    </div>
-</div>
-<!-- NAVBAR CODE END -->
-
-
-<div class="bs-example">
-    <div class="page-header">
-        <h1>Telstra WIFI API <small>Find Hotspots</small></h1>
-    </div>
-</div>
-
-<div class="bs-example">
-    <form th:action="@{/searchHotspots}" method="post" class="form-horizontal">
-        <div class="form-group">
-            <label for="lat" class="control-label col-xs-1">Latitude</label>
-            <div class="col-xs-2">
-                <input type="text" class="form-control" id="lat" name="lat" value="-37.818496"
-                       placeholder="Latitude" />
-            </div>
-            <label for="lon" class="control-label col-xs-1">Longitude</label>
-            <div class="col-xs-2">
-                <input type="text" class="form-control" id="lon" name="lon" value="144.953240"
-                       placeholder="Longitude" />
-            </div>
-            <label for="radius" class="control-label col-xs-1">Radius</label>
-            <div class="col-xs-2">
-                <input type="text" class="form-control" id="radius" name="radius" value="100"
-                       placeholder="Radius" />
-            </div>
-            <div class="col-xs-2">
-                <button type="submit" class="btn btn-primary">Find Telstra WIFI Hotspots</button>
             </div>
         </div>
-    </form>
-</div>
 
-<div class="bs-example" th:if="${hotspots}">
-    <div class="alert alert-success fade in">
-        <a href="#" class="close" data-dismiss="alert">&times;</a>
-        <strong></strong> Found <b th:text="${hotspotscount}"></b> Telstra WIFI Hotspots
+        <div class="space-left bs-example">
+            <div class="page-header">
+                <h1>Telstra WIFI API <small>Find Hotspots</small></h1>
+            </div>
+        </div>
+
+        <div class="space-left row">
+            <form  class="form-horizontal">
+                <div class="form-group">
+                    <label for="lat" class="control-label col-xs-1">Latitude</label>
+                    <div class="col-xs-2">
+                        <input type="text" class="form-control" id="lat" ng-model="lat"  value="-37.818496"
+                               placeholder="Latitude" />
+                    </div>
+                    <label for="lon" class="control-label col-xs-1">Longitude</label>
+                    <div class="col-xs-2">
+                        <input type="text" class="form-control" id="lon" ng-model="lon"  value="144.953240"
+                               placeholder="Longitude" />
+                    </div>
+                    <label for="radius" class="control-label col-xs-1">Radius</label>
+                    <div class="col-xs-2">
+                        <input type="text" class="form-control" id="radius"  ng-model="radius" value="100"
+                               placeholder="Radius" />
+                    </div>
+                    <div class="col-xs-2">
+                        <button type="submit" class="btn btn-primary" ng-click="search()">Find Telstra WIFI Hotspots</button>
+                    </div>
+                </div>
+            </form>
+        </div>
+
+        <!--map div-->
+        <div class="row">
+            <div class="space-left col-xs-6">
+                <div id="map"></div>
+            </div>
+            <!--<h3>WIFI Hotspots</h3>-->
+            <div class="col-xs-5">
+                    <table class="table table-hover table-bordered table-striped table-condensed">
+                        <thead>
+                        <tr>
+                            <th>Address</th>
+                            <th>City</th>
+                            <th>State</th>
+                            <th>Latitude</th>
+                            <th>Longitude</th>
+                        </tr>
+                        </thead>
+                        <tbody>
+                        <tr ng-repeat="hotspot in hotspots">
+                            <td>{{hotspot.address}}</td>
+                            <td>{{hotspot.city}}</td>
+                            <td>{{hotspot.state}}</td>
+                            <td>{{hotspot.lat}}</td>
+                            <td>{{hotspot.long}}</td>
+                        </tr>
+                        </tbody>
+                    </table>
+                </div>
+       </div>
+        <div class="clearfix">
+        </div>
+        <hr size="2" />
+        <div th:include="footer :: copy"></div>
     </div>
-    <h3>WIFI Hotspots</h3>
-    <div class="col-xs-6">
-        <table class="table table-hover table-bordered table-striped table-condensed">
-            <thead>
-            <tr>
-                <th>Address</th>
-                <th>State</th>
-                <th>Latitude</th>
-                <th>Longitude</th>
-            </tr>
-            </thead>
-            <tbody>
-            <tr th:each="hotspot : ${hotspots}">
-                <td th:text="${hotspot.address}"></td>
-                <td th:text="${hotspot.state}"></td>
-                <td th:text="${hotspot.latitude}"></td>
-                <td th:text="${hotspot.longitude}"></td>
-            </tr>
-            </tbody>
-        </table>
-    </div>
 </div>
-
-<!--map div-->
-<div id="map"></div>
-
-<div class="clearfix">
-</div>
-
-<hr size="2" />
-
-<div th:include="footer :: copy"></div>
-
 </body>
 </html>
