--- a/src/main/resources/templates/findhotspots.html
+++ b/src/main/resources/templates/findhotspots.html
@@ -99,33 +99,38 @@
 
         <!--map div-->
         <div class="row">
-            <div class="space-left col-xs-6">
+            <div class="space-left col-xs-10">
                 <div id="map"></div>
             </div>
-            <!--<h3>WIFI Hotspots</h3>-->
-            <div class="col-xs-5">
-                    <table class="table table-hover table-bordered table-striped table-condensed">
-                        <thead>
-                        <tr>
-                            <th>Address</th>
-                            <th>City</th>
-                            <th>State</th>
-                            <th>Latitude</th>
-                            <th>Longitude</th>
-                        </tr>
-                        </thead>
-                        <tbody>
-                        <tr ng-repeat="hotspot in hotspots">
-                            <td>{{hotspot.address}}</td>
-                            <td>{{hotspot.city}}</td>
-                            <td>{{hotspot.state}}</td>
-                            <td>{{hotspot.lat}}</td>
-                            <td>{{hotspot.long}}</td>
-                        </tr>
-                        </tbody>
-                    </table>
-                </div>
        </div>
+
+        <div class="clearfix">
+        </div>
+
+        <h3>WIFI Hotspots</h3>
+        <div class="col-xs-8">
+            <table class="table table-hover table-bordered table-striped table-condensed">
+                <thead>
+                <tr>
+                    <th>Address</th>
+                    <th>City</th>
+                    <th>State</th>
+                    <th>Latitude</th>
+                    <th>Longitude</th>
+                </tr>
+                </thead>
+                <tbody>
+                <tr ng-repeat="hotspot in hotspots">
+                    <td>{{hotspot.address}}</td>
+                    <td>{{hotspot.city}}</td>
+                    <td>{{hotspot.state}}</td>
+                    <td>{{hotspot.lat}}</td>
+                    <td>{{hotspot.long}}</td>
+                </tr>
+                </tbody>
+            </table>
+        </div>
+
         <div class="clearfix">
         </div>
         <hr size="2" />
